<resources>
    <string name="app_name">Firebase</string>
    <string name="action_settings">Settings</string>
    <string name="not_a_user">Not a user yet? <b>Register here</b></string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="contact_number">Contact Number</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
</resources>
